stop decline button submitting

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           />
           <div class="button-container">
             <button class="modal-btn" type="submit">Accept</button>
-            <button class="modal-btn">Decline</button>
+            <button class="modal-btn" type="button">Decline</button>
           </div>
         </form>
       </div>
