--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
             required
           />
           <div class="button-container" id="button-container">
-            <button class="modal-btn" type="submit">Accept</button>
-            <button class="modal-btn" type="button" id="decline-btn">
+            <button class="button-31" type="submit" id="accept-btn">
+              Accept
+            </button>
+            <button class="button-31" type="button" id="decline-btn">
               Decline
             </button>
           </div>
